@@ -5,6 +5,7 @@
 - Improve notification visibility
 - Add now finish time for 6button remotes
 - Add extendedprogress to basic home
+- Add addonnews to addoninfo plotbox
 
 0.9.48
 - Options for info in pvr guide
